# QtPie

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  MY_THOUGHTS_ON_STUFF.md  PLAN.md  README.md  TODO.md  ideas.py  mkdocs.yml  pyproject.toml  pytest.ini
.clinerules/: PyQt.md  Python assertpy.md  Python.md
.github/workflows/: docs.yml
DRAFT/: DRAFTING_SUMMARY.md
DRAFT/drafting/: CODING_DETAILS.md
DRAFT/drafting/.clinerules/: Python.md
DRAFT/other_drafting/: dock_manager.py
DRAFT/other_drafting/qtpie/: bindings.py  tabbed_docks_main_window.py  window.py
docs/: examples.md  index.md  why-qtpie.md
docs/basics/: layouts.md  signals.md  styling.md  widgets.md
docs/data/: dirty.md  format.md  model-widgets.md  record-widgets.md  save-load.md  state.md  undo.md  validation.md
docs/guides/: app.md  async.md  forms.md  grids.md  observant.md  scss.md  testing.md  translations.md  windows-menus.md
docs/reference/app/: app.md  run-app.md
docs/reference/bindings/: bind.md  register.md  widget-base.md
docs/reference/decorators/: action.md  entry-point.md  entrypoint.md  menu.md  slot.md  stylesheet.md  widget.md  window.md
docs/reference/factories/: make-later.md  make.md  separator.md  spacer.md  state.md
docs/reference/styles/: color-schemes.md
docs/start/: concepts.md  hello-world.md  install.md
drafting/drafting/: pyproject.toml
drafting/drafting/.clinerules/: Python uv and poe.md
drafting/examples/: hello_widget.py
drafting/more_recent_drafting/qtpie/: pyproject.toml
drafting/more_recent_drafting/qtpie/qtpie/: __init__.py
drafting/more_recent_drafting/qtpie/qtpie/bindings/: __init__.py  bind.py
drafting/more_recent_drafting/qtpie/qtpie/factories/: __init__.py
drafting/more_recent_drafting/qtpie/qtpie/styles/: stylesheet.py
drafting/other_drafting/qtpie/: __init__.py  make_widget.py  svg.py
drafting/qtpie/: config.py
drafting/tests/factories/: test_attribute_factories.py
examples/experiments/: entry_point_decorator_test.py
examples/hello_widget/: app.py
lib/: pyproject.toml
lib/observant/: __init__.py  observable.py
lib/qtpie/: __init__.py  app.py  layout.py  new.py  new_field.py  new_fields.py  state.py  variable.py  widget.py  widget_base.py
lib/qtpie/bindings/: __init__.py  bind.py  registry.py
lib/qtpie/decorators/: entry_point.py  entrypoint.py  widget.py  window.py
lib/qtpie/factories/: make.py
lib/qtpie/styles/: color_scheme.py
lib/qtpie/testing/: driver.py
lib/qtpie/translations/: __init__.py  cli.py  compiler.py  parser.py  store.py  translatable.py
lib/qtpie/widgets/: __init__.py  filterable_dropdown.py  filterable_dropdown_with_description.py
misc/: ideas.py.bak
more_recent_drafting/: more_recent_drafting_app.py
more_recent_drafting/qtpie/qtpie/: app.py  files.py  types.py
other_drafting/qtpie/: action.py  core.py  files.py  menu.py  run_app.py  screen.py  styles.py  widget.py
other_drafting/qtpie/widgets/: filterable_dropdown.py
qtpie/: __init__.py  config.py  main.py  model_widget.py  pyproject.toml  widget_base.py
qtpie/bindings/: bind.py  registry.py
qtpie/decorators/: __init__.py  action.py  menu.py  widget.py  window.py
qtpie/factories/: __init__.py  grid_position.py  make.py  separator.py  stretch.py  widget_factory_details.py  widget_factory_properties.py
qtpie/factories/attribute_factories/: form_row.py  grid_item.py  make.py
qtpie/factories/dataclass_factories/: form_row.py  grid_item.py  make.py
qtpie/styles/: __init__.py  watcher.py
qtpie/types/: widget_layout_type.py
qtpie_samples/: pyproject.toml
qtpie_samples/samples/regular_qt_app/: app.py
qtpie_test/: __init__.py  driver.py  plugin.py  pyproject.toml
sample/: pyproject.toml
samples/: pyproject.toml
samples/function_entry_point/: function_entry_point.py
samples/run_app-simple-QLabel-window/: app.py
samples/single_file_apps/: app_class_entry_point.py  async_websocket_client.py  async_websocket_server.py  bind_input_fields_to_model.py  counter.py  translations_sample.py  widget_class_entry_point.py
tech-docs/: DRAFTING_SUMMARY.md  QTPIE_TEST_LIBRARY.md
tests/: conftest.py  pyproject.toml  test_config.py
tests/decorators/: _test_helpers.py  test_widget.py  test_widget_class_decorator.py  test_widget_decorator.py  test_widget_shared.py  widget_class_decorator_examples.py  widget_decorator_examples.py
tests/e2e/: test_async_slot_e2e.py  test_entrypoint_e2e.py
tests/factories/: test_attribute_factories.py  test_dataclass_factories.py
tests/observant/: test_observable.py
tests/qtpie/: test_bindings.py  test_variable.py  test_widget.py  test_widget_base.py
tests/qtpie/testing/: test_driver.py
tests/samples/: test_regular_qt_app.py
tests/styles/: test_style_classes.py
tests/test_qtpie/: test_action_decorator.py  test_app.py  test_bindings.py  test_color_scheme.py  test_entry_point.py  test_entry_point_e2e.py  test_form_layout.py  test_grid_layout.py  test_make_factory.py  test_menu_decorator.py  test_model_widget.py  test_stretch.py  test_styles_classes.py  test_styles_loader.py  test_styles_watcher.py  test_widget_decorator.py  test_window_decorator.py
tests/unit/: __init__.py  test_action_decorator.py  test_app.py  test_async_close_event.py  test_bindings.py  test_cli.py  test_entry_point.py  test_entrypoint.py  test_filterable_dropdown.py  test_form_layout.py  test_grid_layout.py  test_make_factory.py  test_menu_decorator.py  test_model_widget.py  test_slot_decorator.py  test_spacer.py  test_state.py  test_stretch.py  test_styles_watcher.py  test_stylesheet_decorator.py  test_translations_compiler.py  test_translations_hotreload.py  test_translations_integration.py  test_translations_parser.py  test_widget_base.py  test_widget_decorator.py  test_widget_observant_features.py  test_window_decorator.py
v1/docs/: examples.md  qt-resources.md
v1/docs/basics/: layouts.md  styling.md  widgets.md
v1/docs/data/: format.md  save-load.md  state.md  undo.md
v1/samples/: pyproject.toml
v1/tests/: conftest.py
v2_prototyping/: pyproject.toml  sample-code-here.py
(+73 files in other folders)
