[project]
dependencies = [
  "observant>=0.1.6",
]
description = "Tasty way to build Qt apps ðŸ°"
name = "qtpie-project"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[dependency-groups]
dev = [
  "assertpy>=1.1",
  "httpx>=0.28.1",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.0",
  "pre-commit>=4.5.0",
  "pyright>=1.1.407",
  "pyside6>=6.10.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "qtpie",
  "qtpie-test",
  "qtpie_samples",
  "ruff>=0.14.9",
  "websockets>=15.0.1",
]

[tool.uv.sources]
qtpie = {workspace = true}
qtpie-test = {workspace = true}
qtpie_samples = {workspace = true}

[tool.uv.workspace]
members = [
  "lib",
  "samples",
  "qtpie_test",
  "tests",
]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.13"
reportPrivateImportUsage = false
typeCheckingMode = "strict"
venv = ".venv"
venvPath = "."

# Analyze unannotated functions (so you still get checking),
# but DO NOT require explicit return annotations.
analyzeUnannotatedFunctions = true

# Ban unknown / untyped stuff everywhere
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"

# Extra pedantic goodness
reportImplicitOverride = "error"
strictDictionaryInference = true
strictListInference = true
strictParameterNoneValue = true
strictSetInference = true

[tool.ruff]
line-length = 200
target-version = "py314"

[tool.ruff.lint]
ignore = []
select = [
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort-style import rules
  "B", # flake8-bugbear: common bugs & gotchas
  "UP", # pyupgrade: use modern Python features
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["qtpie"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]
source = ["lib/qtpie"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

[tool.pytest.ini_options]
addopts = "--cov=qtpie --cov-report=term-missing"
markers = [
  "e2e: end-to-end subprocess tests (can be skipped with -m 'not e2e')",
]
