[project]
dependencies = [
  "qtpy>=2.4.3",
  "observant>=0.1.5",
  "mrowrpurr-pyscss>=1.4.1",
  "qasync>=0.27.1",
]
description = "Add your description here"
name = "qtpie"
requires-python = ">=3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]
