[project]
dependencies = [
  "pytest-qt>=4.5.0",
  "qtpy>=2.4.3",
]
description = "Test helpers for QtPie"
name = "qtpie_test"
requires-python = ">=3.12"
version = "0.1.0"

[project.entry-points.pytest11]
qtpie_test = "qtpie_test.plugin"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]
