[project]
dependencies = [
  "qtpie",
]
description = "QtPie sample apps"
name = "qtpie_samples"
requires-python = ">=3.13"
version = "0.1.0"

[tool.uv.sources]
qtpie = {workspace = true}

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["samples"]
